add priceList
