# gft-test-domain/src/main/java/com/gtf/inditex/model/PriceList.java
@@ -1,0 +1,13 @@
+package com.gtf.inditex.model;
+
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Data
+@NoArgsConstructor
+@AllArgsConstructor
+public class PriceList {
+    private Integer id;
+    private String fare;
+}
