# gft-test-service/src/main/java/com/gft/inditex/entity/PriceListEntity.java
@@ -1,0 +1,23 @@
+package com.gft.inditex.entity;
+
+import jakarta.persistence.*;
+import lombok.*;
+
+import java.io.Serializable;
+
+@Getter
+@Setter
+@EqualsAndHashCode
+@NoArgsConstructor
+@AllArgsConstructor
+@ToString
+@Entity
+@Table(name = "PRICE_LIST")
+public class PriceListEntity implements Serializable {
+
+    @Id
+    @GeneratedValue(strategy = GenerationType.AUTO)
+    private Integer id;
+    private String fare;
+}
+
